Corto1Project/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> INICIO
Rule 1     INICIO -> PROR
Rule 2     PROR -> PROR OR PRAND
Rule 3     PROR -> PRAND
Rule 4     PRAND -> PRAND AND LOGICUNIT
Rule 5     PRAND -> LOGICUNIT
Rule 6     LOGICUNIT -> NOT LOGICUNIT
Rule 7     LOGICUNIT -> PARIZQ PROR PARDER
Rule 8     LOGICUNIT -> REL
Rule 9     LOGICUNIT -> VTRUE
Rule 10    LOGICUNIT -> VFALSE
Rule 11    REL -> S MAYOR S
Rule 12    REL -> S MENOR S
Rule 13    REL -> S MAYORIGUAL S
Rule 14    REL -> S MENORIGUAL S
Rule 15    REL -> S IGUALQUE S
Rule 16    REL -> S DIFERENTE S
Rule 17    REL -> PARIZQ REL PARDER
Rule 18    REL -> S
Rule 19    S -> E
Rule 20    E -> E MAS T
Rule 21    E -> E MENOS T
Rule 22    E -> T
Rule 23    T -> T POR F
Rule 24    T -> T DIVIDE F
Rule 25    T -> F
Rule 26    F -> PARIZQ E PARDER
Rule 27    F -> ID
Rule 28    F -> ENTERO

Terminals, with rules where they appear

AND                  : 4
DIFERENTE            : 16
DIVIDE               : 24
ENTERO               : 28
ID                   : 27
IGUALQUE             : 15
MAS                  : 20
MAYOR                : 11
MAYORIGUAL           : 13
MENOR                : 12
MENORIGUAL           : 14
MENOS                : 21
NOT                  : 6
OR                   : 2
PARDER               : 7 17 26
PARIZQ               : 7 17 26
POR                  : 23
VFALSE               : 10
VTRUE                : 9
error                : 

Nonterminals, with rules where they appear

E                    : 19 20 21 26
F                    : 23 24 25
INICIO               : 0
LOGICUNIT            : 4 5 6
PRAND                : 2 3 4
PROR                 : 1 2 7
REL                  : 8 17
S                    : 11 11 12 12 13 13 14 14 15 15 16 16 18
T                    : 20 21 22 23 24

Parsing method: LALR

state 0

    (0) S' -> . INICIO
    (1) INICIO -> . PROR
    (2) PROR -> . PROR OR PRAND
    (3) PROR -> . PRAND
    (4) PRAND -> . PRAND AND LOGICUNIT
    (5) PRAND -> . LOGICUNIT
    (6) LOGICUNIT -> . NOT LOGICUNIT
    (7) LOGICUNIT -> . PARIZQ PROR PARDER
    (8) LOGICUNIT -> . REL
    (9) LOGICUNIT -> . VTRUE
    (10) LOGICUNIT -> . VFALSE
    (11) REL -> . S MAYOR S
    (12) REL -> . S MENOR S
    (13) REL -> . S MAYORIGUAL S
    (14) REL -> . S MENORIGUAL S
    (15) REL -> . S IGUALQUE S
    (16) REL -> . S DIFERENTE S
    (17) REL -> . PARIZQ REL PARDER
    (18) REL -> . S
    (19) S -> . E
    (20) E -> . E MAS T
    (21) E -> . E MENOS T
    (22) E -> . T
    (23) T -> . T POR F
    (24) T -> . T DIVIDE F
    (25) T -> . F
    (26) F -> . PARIZQ E PARDER
    (27) F -> . ID
    (28) F -> . ENTERO

    NOT             shift and go to state 5
    PARIZQ          shift and go to state 6
    VTRUE           shift and go to state 8
    VFALSE          shift and go to state 9
    ID              shift and go to state 14
    ENTERO          shift and go to state 15

    INICIO                         shift and go to state 1
    PROR                           shift and go to state 2
    PRAND                          shift and go to state 3
    LOGICUNIT                      shift and go to state 4
    REL                            shift and go to state 7
    S                              shift and go to state 10
    E                              shift and go to state 11
    T                              shift and go to state 12
    F                              shift and go to state 13

state 1

    (0) S' -> INICIO .



state 2

    (1) INICIO -> PROR .
    (2) PROR -> PROR . OR PRAND

    $end            reduce using rule 1 (INICIO -> PROR .)
    OR              shift and go to state 16


state 3

    (3) PROR -> PRAND .
    (4) PRAND -> PRAND . AND LOGICUNIT

    OR              reduce using rule 3 (PROR -> PRAND .)
    $end            reduce using rule 3 (PROR -> PRAND .)
    PARDER          reduce using rule 3 (PROR -> PRAND .)
    AND             shift and go to state 17


state 4

    (5) PRAND -> LOGICUNIT .

    AND             reduce using rule 5 (PRAND -> LOGICUNIT .)
    OR              reduce using rule 5 (PRAND -> LOGICUNIT .)
    $end            reduce using rule 5 (PRAND -> LOGICUNIT .)
    PARDER          reduce using rule 5 (PRAND -> LOGICUNIT .)


state 5

    (6) LOGICUNIT -> NOT . LOGICUNIT
    (6) LOGICUNIT -> . NOT LOGICUNIT
    (7) LOGICUNIT -> . PARIZQ PROR PARDER
    (8) LOGICUNIT -> . REL
    (9) LOGICUNIT -> . VTRUE
    (10) LOGICUNIT -> . VFALSE
    (11) REL -> . S MAYOR S
    (12) REL -> . S MENOR S
    (13) REL -> . S MAYORIGUAL S
    (14) REL -> . S MENORIGUAL S
    (15) REL -> . S IGUALQUE S
    (16) REL -> . S DIFERENTE S
    (17) REL -> . PARIZQ REL PARDER
    (18) REL -> . S
    (19) S -> . E
    (20) E -> . E MAS T
    (21) E -> . E MENOS T
    (22) E -> . T
    (23) T -> . T POR F
    (24) T -> . T DIVIDE F
    (25) T -> . F
    (26) F -> . PARIZQ E PARDER
    (27) F -> . ID
    (28) F -> . ENTERO

    NOT             shift and go to state 5
    PARIZQ          shift and go to state 6
    VTRUE           shift and go to state 8
    VFALSE          shift and go to state 9
    ID              shift and go to state 14
    ENTERO          shift and go to state 15

    LOGICUNIT                      shift and go to state 18
    REL                            shift and go to state 7
    S                              shift and go to state 10
    E                              shift and go to state 11
    T                              shift and go to state 12
    F                              shift and go to state 13

state 6

    (7) LOGICUNIT -> PARIZQ . PROR PARDER
    (17) REL -> PARIZQ . REL PARDER
    (26) F -> PARIZQ . E PARDER
    (2) PROR -> . PROR OR PRAND
    (3) PROR -> . PRAND
    (11) REL -> . S MAYOR S
    (12) REL -> . S MENOR S
    (13) REL -> . S MAYORIGUAL S
    (14) REL -> . S MENORIGUAL S
    (15) REL -> . S IGUALQUE S
    (16) REL -> . S DIFERENTE S
    (17) REL -> . PARIZQ REL PARDER
    (18) REL -> . S
    (20) E -> . E MAS T
    (21) E -> . E MENOS T
    (22) E -> . T
    (4) PRAND -> . PRAND AND LOGICUNIT
    (5) PRAND -> . LOGICUNIT
    (19) S -> . E
    (23) T -> . T POR F
    (24) T -> . T DIVIDE F
    (25) T -> . F
    (6) LOGICUNIT -> . NOT LOGICUNIT
    (7) LOGICUNIT -> . PARIZQ PROR PARDER
    (8) LOGICUNIT -> . REL
    (9) LOGICUNIT -> . VTRUE
    (10) LOGICUNIT -> . VFALSE
    (26) F -> . PARIZQ E PARDER
    (27) F -> . ID
    (28) F -> . ENTERO

    PARIZQ          shift and go to state 19
    NOT             shift and go to state 5
    VTRUE           shift and go to state 8
    VFALSE          shift and go to state 9
    ID              shift and go to state 14
    ENTERO          shift and go to state 15

    PROR                           shift and go to state 20
    REL                            shift and go to state 21
    E                              shift and go to state 22
    PRAND                          shift and go to state 3
    S                              shift and go to state 10
    T                              shift and go to state 12
    LOGICUNIT                      shift and go to state 4
    F                              shift and go to state 13

state 7

    (8) LOGICUNIT -> REL .

    AND             reduce using rule 8 (LOGICUNIT -> REL .)
    OR              reduce using rule 8 (LOGICUNIT -> REL .)
    $end            reduce using rule 8 (LOGICUNIT -> REL .)
    PARDER          reduce using rule 8 (LOGICUNIT -> REL .)


state 8

    (9) LOGICUNIT -> VTRUE .

    AND             reduce using rule 9 (LOGICUNIT -> VTRUE .)
    OR              reduce using rule 9 (LOGICUNIT -> VTRUE .)
    $end            reduce using rule 9 (LOGICUNIT -> VTRUE .)
    PARDER          reduce using rule 9 (LOGICUNIT -> VTRUE .)


state 9

    (10) LOGICUNIT -> VFALSE .

    AND             reduce using rule 10 (LOGICUNIT -> VFALSE .)
    OR              reduce using rule 10 (LOGICUNIT -> VFALSE .)
    $end            reduce using rule 10 (LOGICUNIT -> VFALSE .)
    PARDER          reduce using rule 10 (LOGICUNIT -> VFALSE .)


state 10

    (11) REL -> S . MAYOR S
    (12) REL -> S . MENOR S
    (13) REL -> S . MAYORIGUAL S
    (14) REL -> S . MENORIGUAL S
    (15) REL -> S . IGUALQUE S
    (16) REL -> S . DIFERENTE S
    (18) REL -> S .

    MAYOR           shift and go to state 23
    MENOR           shift and go to state 24
    MAYORIGUAL      shift and go to state 25
    MENORIGUAL      shift and go to state 26
    IGUALQUE        shift and go to state 27
    DIFERENTE       shift and go to state 28
    AND             reduce using rule 18 (REL -> S .)
    OR              reduce using rule 18 (REL -> S .)
    $end            reduce using rule 18 (REL -> S .)
    PARDER          reduce using rule 18 (REL -> S .)


state 11

    (19) S -> E .
    (20) E -> E . MAS T
    (21) E -> E . MENOS T

    MAYOR           reduce using rule 19 (S -> E .)
    MENOR           reduce using rule 19 (S -> E .)
    MAYORIGUAL      reduce using rule 19 (S -> E .)
    MENORIGUAL      reduce using rule 19 (S -> E .)
    IGUALQUE        reduce using rule 19 (S -> E .)
    DIFERENTE       reduce using rule 19 (S -> E .)
    AND             reduce using rule 19 (S -> E .)
    OR              reduce using rule 19 (S -> E .)
    $end            reduce using rule 19 (S -> E .)
    PARDER          reduce using rule 19 (S -> E .)
    MAS             shift and go to state 29
    MENOS           shift and go to state 30


state 12

    (22) E -> T .
    (23) T -> T . POR F
    (24) T -> T . DIVIDE F

    MAS             reduce using rule 22 (E -> T .)
    MENOS           reduce using rule 22 (E -> T .)
    MAYOR           reduce using rule 22 (E -> T .)
    MENOR           reduce using rule 22 (E -> T .)
    MAYORIGUAL      reduce using rule 22 (E -> T .)
    MENORIGUAL      reduce using rule 22 (E -> T .)
    IGUALQUE        reduce using rule 22 (E -> T .)
    DIFERENTE       reduce using rule 22 (E -> T .)
    AND             reduce using rule 22 (E -> T .)
    OR              reduce using rule 22 (E -> T .)
    $end            reduce using rule 22 (E -> T .)
    PARDER          reduce using rule 22 (E -> T .)
    POR             shift and go to state 31
    DIVIDE          shift and go to state 32


state 13

    (25) T -> F .

    POR             reduce using rule 25 (T -> F .)
    DIVIDE          reduce using rule 25 (T -> F .)
    MAS             reduce using rule 25 (T -> F .)
    MENOS           reduce using rule 25 (T -> F .)
    MAYOR           reduce using rule 25 (T -> F .)
    MENOR           reduce using rule 25 (T -> F .)
    MAYORIGUAL      reduce using rule 25 (T -> F .)
    MENORIGUAL      reduce using rule 25 (T -> F .)
    IGUALQUE        reduce using rule 25 (T -> F .)
    DIFERENTE       reduce using rule 25 (T -> F .)
    AND             reduce using rule 25 (T -> F .)
    OR              reduce using rule 25 (T -> F .)
    $end            reduce using rule 25 (T -> F .)
    PARDER          reduce using rule 25 (T -> F .)


state 14

    (27) F -> ID .

    POR             reduce using rule 27 (F -> ID .)
    DIVIDE          reduce using rule 27 (F -> ID .)
    MAS             reduce using rule 27 (F -> ID .)
    MENOS           reduce using rule 27 (F -> ID .)
    MAYOR           reduce using rule 27 (F -> ID .)
    MENOR           reduce using rule 27 (F -> ID .)
    MAYORIGUAL      reduce using rule 27 (F -> ID .)
    MENORIGUAL      reduce using rule 27 (F -> ID .)
    IGUALQUE        reduce using rule 27 (F -> ID .)
    DIFERENTE       reduce using rule 27 (F -> ID .)
    AND             reduce using rule 27 (F -> ID .)
    OR              reduce using rule 27 (F -> ID .)
    $end            reduce using rule 27 (F -> ID .)
    PARDER          reduce using rule 27 (F -> ID .)


state 15

    (28) F -> ENTERO .

    POR             reduce using rule 28 (F -> ENTERO .)
    DIVIDE          reduce using rule 28 (F -> ENTERO .)
    MAS             reduce using rule 28 (F -> ENTERO .)
    MENOS           reduce using rule 28 (F -> ENTERO .)
    MAYOR           reduce using rule 28 (F -> ENTERO .)
    MENOR           reduce using rule 28 (F -> ENTERO .)
    MAYORIGUAL      reduce using rule 28 (F -> ENTERO .)
    MENORIGUAL      reduce using rule 28 (F -> ENTERO .)
    IGUALQUE        reduce using rule 28 (F -> ENTERO .)
    DIFERENTE       reduce using rule 28 (F -> ENTERO .)
    AND             reduce using rule 28 (F -> ENTERO .)
    OR              reduce using rule 28 (F -> ENTERO .)
    $end            reduce using rule 28 (F -> ENTERO .)
    PARDER          reduce using rule 28 (F -> ENTERO .)


state 16

    (2) PROR -> PROR OR . PRAND
    (4) PRAND -> . PRAND AND LOGICUNIT
    (5) PRAND -> . LOGICUNIT
    (6) LOGICUNIT -> . NOT LOGICUNIT
    (7) LOGICUNIT -> . PARIZQ PROR PARDER
    (8) LOGICUNIT -> . REL
    (9) LOGICUNIT -> . VTRUE
    (10) LOGICUNIT -> . VFALSE
    (11) REL -> . S MAYOR S
    (12) REL -> . S MENOR S
    (13) REL -> . S MAYORIGUAL S
    (14) REL -> . S MENORIGUAL S
    (15) REL -> . S IGUALQUE S
    (16) REL -> . S DIFERENTE S
    (17) REL -> . PARIZQ REL PARDER
    (18) REL -> . S
    (19) S -> . E
    (20) E -> . E MAS T
    (21) E -> . E MENOS T
    (22) E -> . T
    (23) T -> . T POR F
    (24) T -> . T DIVIDE F
    (25) T -> . F
    (26) F -> . PARIZQ E PARDER
    (27) F -> . ID
    (28) F -> . ENTERO

    NOT             shift and go to state 5
    PARIZQ          shift and go to state 6
    VTRUE           shift and go to state 8
    VFALSE          shift and go to state 9
    ID              shift and go to state 14
    ENTERO          shift and go to state 15

    PRAND                          shift and go to state 33
    LOGICUNIT                      shift and go to state 4
    REL                            shift and go to state 7
    S                              shift and go to state 10
    E                              shift and go to state 11
    T                              shift and go to state 12
    F                              shift and go to state 13

state 17

    (4) PRAND -> PRAND AND . LOGICUNIT
    (6) LOGICUNIT -> . NOT LOGICUNIT
    (7) LOGICUNIT -> . PARIZQ PROR PARDER
    (8) LOGICUNIT -> . REL
    (9) LOGICUNIT -> . VTRUE
    (10) LOGICUNIT -> . VFALSE
    (11) REL -> . S MAYOR S
    (12) REL -> . S MENOR S
    (13) REL -> . S MAYORIGUAL S
    (14) REL -> . S MENORIGUAL S
    (15) REL -> . S IGUALQUE S
    (16) REL -> . S DIFERENTE S
    (17) REL -> . PARIZQ REL PARDER
    (18) REL -> . S
    (19) S -> . E
    (20) E -> . E MAS T
    (21) E -> . E MENOS T
    (22) E -> . T
    (23) T -> . T POR F
    (24) T -> . T DIVIDE F
    (25) T -> . F
    (26) F -> . PARIZQ E PARDER
    (27) F -> . ID
    (28) F -> . ENTERO

    NOT             shift and go to state 5
    PARIZQ          shift and go to state 6
    VTRUE           shift and go to state 8
    VFALSE          shift and go to state 9
    ID              shift and go to state 14
    ENTERO          shift and go to state 15

    LOGICUNIT                      shift and go to state 34
    REL                            shift and go to state 7
    S                              shift and go to state 10
    E                              shift and go to state 11
    T                              shift and go to state 12
    F                              shift and go to state 13

state 18

    (6) LOGICUNIT -> NOT LOGICUNIT .

    AND             reduce using rule 6 (LOGICUNIT -> NOT LOGICUNIT .)
    OR              reduce using rule 6 (LOGICUNIT -> NOT LOGICUNIT .)
    $end            reduce using rule 6 (LOGICUNIT -> NOT LOGICUNIT .)
    PARDER          reduce using rule 6 (LOGICUNIT -> NOT LOGICUNIT .)


state 19

    (17) REL -> PARIZQ . REL PARDER
    (7) LOGICUNIT -> PARIZQ . PROR PARDER
    (26) F -> PARIZQ . E PARDER
    (11) REL -> . S MAYOR S
    (12) REL -> . S MENOR S
    (13) REL -> . S MAYORIGUAL S
    (14) REL -> . S MENORIGUAL S
    (15) REL -> . S IGUALQUE S
    (16) REL -> . S DIFERENTE S
    (17) REL -> . PARIZQ REL PARDER
    (18) REL -> . S
    (2) PROR -> . PROR OR PRAND
    (3) PROR -> . PRAND
    (20) E -> . E MAS T
    (21) E -> . E MENOS T
    (22) E -> . T
    (19) S -> . E
    (4) PRAND -> . PRAND AND LOGICUNIT
    (5) PRAND -> . LOGICUNIT
    (23) T -> . T POR F
    (24) T -> . T DIVIDE F
    (25) T -> . F
    (6) LOGICUNIT -> . NOT LOGICUNIT
    (7) LOGICUNIT -> . PARIZQ PROR PARDER
    (8) LOGICUNIT -> . REL
    (9) LOGICUNIT -> . VTRUE
    (10) LOGICUNIT -> . VFALSE
    (26) F -> . PARIZQ E PARDER
    (27) F -> . ID
    (28) F -> . ENTERO

    PARIZQ          shift and go to state 19
    NOT             shift and go to state 5
    VTRUE           shift and go to state 8
    VFALSE          shift and go to state 9
    ID              shift and go to state 14
    ENTERO          shift and go to state 15

    REL                            shift and go to state 21
    PROR                           shift and go to state 20
    E                              shift and go to state 22
    S                              shift and go to state 10
    PRAND                          shift and go to state 3
    T                              shift and go to state 12
    LOGICUNIT                      shift and go to state 4
    F                              shift and go to state 13

state 20

    (7) LOGICUNIT -> PARIZQ PROR . PARDER
    (2) PROR -> PROR . OR PRAND

    PARDER          shift and go to state 35
    OR              shift and go to state 16


state 21

    (17) REL -> PARIZQ REL . PARDER
    (8) LOGICUNIT -> REL .

  ! shift/reduce conflict for PARDER resolved as shift
    PARDER          shift and go to state 36
    AND             reduce using rule 8 (LOGICUNIT -> REL .)
    OR              reduce using rule 8 (LOGICUNIT -> REL .)

  ! PARDER          [ reduce using rule 8 (LOGICUNIT -> REL .) ]


state 22

    (26) F -> PARIZQ E . PARDER
    (20) E -> E . MAS T
    (21) E -> E . MENOS T
    (19) S -> E .

  ! shift/reduce conflict for PARDER resolved as shift
    PARDER          shift and go to state 37
    MAS             shift and go to state 29
    MENOS           shift and go to state 30
    MAYOR           reduce using rule 19 (S -> E .)
    MENOR           reduce using rule 19 (S -> E .)
    MAYORIGUAL      reduce using rule 19 (S -> E .)
    MENORIGUAL      reduce using rule 19 (S -> E .)
    IGUALQUE        reduce using rule 19 (S -> E .)
    DIFERENTE       reduce using rule 19 (S -> E .)
    AND             reduce using rule 19 (S -> E .)
    OR              reduce using rule 19 (S -> E .)

  ! PARDER          [ reduce using rule 19 (S -> E .) ]


state 23

    (11) REL -> S MAYOR . S
    (19) S -> . E
    (20) E -> . E MAS T
    (21) E -> . E MENOS T
    (22) E -> . T
    (23) T -> . T POR F
    (24) T -> . T DIVIDE F
    (25) T -> . F
    (26) F -> . PARIZQ E PARDER
    (27) F -> . ID
    (28) F -> . ENTERO

    PARIZQ          shift and go to state 39
    ID              shift and go to state 14
    ENTERO          shift and go to state 15

    S                              shift and go to state 38
    E                              shift and go to state 11
    T                              shift and go to state 12
    F                              shift and go to state 13

state 24

    (12) REL -> S MENOR . S
    (19) S -> . E
    (20) E -> . E MAS T
    (21) E -> . E MENOS T
    (22) E -> . T
    (23) T -> . T POR F
    (24) T -> . T DIVIDE F
    (25) T -> . F
    (26) F -> . PARIZQ E PARDER
    (27) F -> . ID
    (28) F -> . ENTERO

    PARIZQ          shift and go to state 39
    ID              shift and go to state 14
    ENTERO          shift and go to state 15

    S                              shift and go to state 40
    E                              shift and go to state 11
    T                              shift and go to state 12
    F                              shift and go to state 13

state 25

    (13) REL -> S MAYORIGUAL . S
    (19) S -> . E
    (20) E -> . E MAS T
    (21) E -> . E MENOS T
    (22) E -> . T
    (23) T -> . T POR F
    (24) T -> . T DIVIDE F
    (25) T -> . F
    (26) F -> . PARIZQ E PARDER
    (27) F -> . ID
    (28) F -> . ENTERO

    PARIZQ          shift and go to state 39
    ID              shift and go to state 14
    ENTERO          shift and go to state 15

    S                              shift and go to state 41
    E                              shift and go to state 11
    T                              shift and go to state 12
    F                              shift and go to state 13

state 26

    (14) REL -> S MENORIGUAL . S
    (19) S -> . E
    (20) E -> . E MAS T
    (21) E -> . E MENOS T
    (22) E -> . T
    (23) T -> . T POR F
    (24) T -> . T DIVIDE F
    (25) T -> . F
    (26) F -> . PARIZQ E PARDER
    (27) F -> . ID
    (28) F -> . ENTERO

    PARIZQ          shift and go to state 39
    ID              shift and go to state 14
    ENTERO          shift and go to state 15

    S                              shift and go to state 42
    E                              shift and go to state 11
    T                              shift and go to state 12
    F                              shift and go to state 13

state 27

    (15) REL -> S IGUALQUE . S
    (19) S -> . E
    (20) E -> . E MAS T
    (21) E -> . E MENOS T
    (22) E -> . T
    (23) T -> . T POR F
    (24) T -> . T DIVIDE F
    (25) T -> . F
    (26) F -> . PARIZQ E PARDER
    (27) F -> . ID
    (28) F -> . ENTERO

    PARIZQ          shift and go to state 39
    ID              shift and go to state 14
    ENTERO          shift and go to state 15

    S                              shift and go to state 43
    E                              shift and go to state 11
    T                              shift and go to state 12
    F                              shift and go to state 13

state 28

    (16) REL -> S DIFERENTE . S
    (19) S -> . E
    (20) E -> . E MAS T
    (21) E -> . E MENOS T
    (22) E -> . T
    (23) T -> . T POR F
    (24) T -> . T DIVIDE F
    (25) T -> . F
    (26) F -> . PARIZQ E PARDER
    (27) F -> . ID
    (28) F -> . ENTERO

    PARIZQ          shift and go to state 39
    ID              shift and go to state 14
    ENTERO          shift and go to state 15

    S                              shift and go to state 44
    E                              shift and go to state 11
    T                              shift and go to state 12
    F                              shift and go to state 13

state 29

    (20) E -> E MAS . T
    (23) T -> . T POR F
    (24) T -> . T DIVIDE F
    (25) T -> . F
    (26) F -> . PARIZQ E PARDER
    (27) F -> . ID
    (28) F -> . ENTERO

    PARIZQ          shift and go to state 39
    ID              shift and go to state 14
    ENTERO          shift and go to state 15

    T                              shift and go to state 45
    F                              shift and go to state 13

state 30

    (21) E -> E MENOS . T
    (23) T -> . T POR F
    (24) T -> . T DIVIDE F
    (25) T -> . F
    (26) F -> . PARIZQ E PARDER
    (27) F -> . ID
    (28) F -> . ENTERO

    PARIZQ          shift and go to state 39
    ID              shift and go to state 14
    ENTERO          shift and go to state 15

    T                              shift and go to state 46
    F                              shift and go to state 13

state 31

    (23) T -> T POR . F
    (26) F -> . PARIZQ E PARDER
    (27) F -> . ID
    (28) F -> . ENTERO

    PARIZQ          shift and go to state 39
    ID              shift and go to state 14
    ENTERO          shift and go to state 15

    F                              shift and go to state 47

state 32

    (24) T -> T DIVIDE . F
    (26) F -> . PARIZQ E PARDER
    (27) F -> . ID
    (28) F -> . ENTERO

    PARIZQ          shift and go to state 39
    ID              shift and go to state 14
    ENTERO          shift and go to state 15

    F                              shift and go to state 48

state 33

    (2) PROR -> PROR OR PRAND .
    (4) PRAND -> PRAND . AND LOGICUNIT

    OR              reduce using rule 2 (PROR -> PROR OR PRAND .)
    $end            reduce using rule 2 (PROR -> PROR OR PRAND .)
    PARDER          reduce using rule 2 (PROR -> PROR OR PRAND .)
    AND             shift and go to state 17


state 34

    (4) PRAND -> PRAND AND LOGICUNIT .

    AND             reduce using rule 4 (PRAND -> PRAND AND LOGICUNIT .)
    OR              reduce using rule 4 (PRAND -> PRAND AND LOGICUNIT .)
    $end            reduce using rule 4 (PRAND -> PRAND AND LOGICUNIT .)
    PARDER          reduce using rule 4 (PRAND -> PRAND AND LOGICUNIT .)


state 35

    (7) LOGICUNIT -> PARIZQ PROR PARDER .

    AND             reduce using rule 7 (LOGICUNIT -> PARIZQ PROR PARDER .)
    OR              reduce using rule 7 (LOGICUNIT -> PARIZQ PROR PARDER .)
    $end            reduce using rule 7 (LOGICUNIT -> PARIZQ PROR PARDER .)
    PARDER          reduce using rule 7 (LOGICUNIT -> PARIZQ PROR PARDER .)


state 36

    (17) REL -> PARIZQ REL PARDER .

    AND             reduce using rule 17 (REL -> PARIZQ REL PARDER .)
    OR              reduce using rule 17 (REL -> PARIZQ REL PARDER .)
    $end            reduce using rule 17 (REL -> PARIZQ REL PARDER .)
    PARDER          reduce using rule 17 (REL -> PARIZQ REL PARDER .)


state 37

    (26) F -> PARIZQ E PARDER .

    POR             reduce using rule 26 (F -> PARIZQ E PARDER .)
    DIVIDE          reduce using rule 26 (F -> PARIZQ E PARDER .)
    MAS             reduce using rule 26 (F -> PARIZQ E PARDER .)
    MENOS           reduce using rule 26 (F -> PARIZQ E PARDER .)
    MAYOR           reduce using rule 26 (F -> PARIZQ E PARDER .)
    MENOR           reduce using rule 26 (F -> PARIZQ E PARDER .)
    MAYORIGUAL      reduce using rule 26 (F -> PARIZQ E PARDER .)
    MENORIGUAL      reduce using rule 26 (F -> PARIZQ E PARDER .)
    IGUALQUE        reduce using rule 26 (F -> PARIZQ E PARDER .)
    DIFERENTE       reduce using rule 26 (F -> PARIZQ E PARDER .)
    AND             reduce using rule 26 (F -> PARIZQ E PARDER .)
    OR              reduce using rule 26 (F -> PARIZQ E PARDER .)
    $end            reduce using rule 26 (F -> PARIZQ E PARDER .)
    PARDER          reduce using rule 26 (F -> PARIZQ E PARDER .)


state 38

    (11) REL -> S MAYOR S .

    AND             reduce using rule 11 (REL -> S MAYOR S .)
    OR              reduce using rule 11 (REL -> S MAYOR S .)
    $end            reduce using rule 11 (REL -> S MAYOR S .)
    PARDER          reduce using rule 11 (REL -> S MAYOR S .)


state 39

    (26) F -> PARIZQ . E PARDER
    (20) E -> . E MAS T
    (21) E -> . E MENOS T
    (22) E -> . T
    (23) T -> . T POR F
    (24) T -> . T DIVIDE F
    (25) T -> . F
    (26) F -> . PARIZQ E PARDER
    (27) F -> . ID
    (28) F -> . ENTERO

    PARIZQ          shift and go to state 39
    ID              shift and go to state 14
    ENTERO          shift and go to state 15

    E                              shift and go to state 49
    T                              shift and go to state 12
    F                              shift and go to state 13

state 40

    (12) REL -> S MENOR S .

    AND             reduce using rule 12 (REL -> S MENOR S .)
    OR              reduce using rule 12 (REL -> S MENOR S .)
    $end            reduce using rule 12 (REL -> S MENOR S .)
    PARDER          reduce using rule 12 (REL -> S MENOR S .)


state 41

    (13) REL -> S MAYORIGUAL S .

    AND             reduce using rule 13 (REL -> S MAYORIGUAL S .)
    OR              reduce using rule 13 (REL -> S MAYORIGUAL S .)
    $end            reduce using rule 13 (REL -> S MAYORIGUAL S .)
    PARDER          reduce using rule 13 (REL -> S MAYORIGUAL S .)


state 42

    (14) REL -> S MENORIGUAL S .

    AND             reduce using rule 14 (REL -> S MENORIGUAL S .)
    OR              reduce using rule 14 (REL -> S MENORIGUAL S .)
    $end            reduce using rule 14 (REL -> S MENORIGUAL S .)
    PARDER          reduce using rule 14 (REL -> S MENORIGUAL S .)


state 43

    (15) REL -> S IGUALQUE S .

    AND             reduce using rule 15 (REL -> S IGUALQUE S .)
    OR              reduce using rule 15 (REL -> S IGUALQUE S .)
    $end            reduce using rule 15 (REL -> S IGUALQUE S .)
    PARDER          reduce using rule 15 (REL -> S IGUALQUE S .)


state 44

    (16) REL -> S DIFERENTE S .

    AND             reduce using rule 16 (REL -> S DIFERENTE S .)
    OR              reduce using rule 16 (REL -> S DIFERENTE S .)
    $end            reduce using rule 16 (REL -> S DIFERENTE S .)
    PARDER          reduce using rule 16 (REL -> S DIFERENTE S .)


state 45

    (20) E -> E MAS T .
    (23) T -> T . POR F
    (24) T -> T . DIVIDE F

    MAS             reduce using rule 20 (E -> E MAS T .)
    MENOS           reduce using rule 20 (E -> E MAS T .)
    MAYOR           reduce using rule 20 (E -> E MAS T .)
    MENOR           reduce using rule 20 (E -> E MAS T .)
    MAYORIGUAL      reduce using rule 20 (E -> E MAS T .)
    MENORIGUAL      reduce using rule 20 (E -> E MAS T .)
    IGUALQUE        reduce using rule 20 (E -> E MAS T .)
    DIFERENTE       reduce using rule 20 (E -> E MAS T .)
    AND             reduce using rule 20 (E -> E MAS T .)
    OR              reduce using rule 20 (E -> E MAS T .)
    $end            reduce using rule 20 (E -> E MAS T .)
    PARDER          reduce using rule 20 (E -> E MAS T .)
    POR             shift and go to state 31
    DIVIDE          shift and go to state 32


state 46

    (21) E -> E MENOS T .
    (23) T -> T . POR F
    (24) T -> T . DIVIDE F

    MAS             reduce using rule 21 (E -> E MENOS T .)
    MENOS           reduce using rule 21 (E -> E MENOS T .)
    MAYOR           reduce using rule 21 (E -> E MENOS T .)
    MENOR           reduce using rule 21 (E -> E MENOS T .)
    MAYORIGUAL      reduce using rule 21 (E -> E MENOS T .)
    MENORIGUAL      reduce using rule 21 (E -> E MENOS T .)
    IGUALQUE        reduce using rule 21 (E -> E MENOS T .)
    DIFERENTE       reduce using rule 21 (E -> E MENOS T .)
    AND             reduce using rule 21 (E -> E MENOS T .)
    OR              reduce using rule 21 (E -> E MENOS T .)
    $end            reduce using rule 21 (E -> E MENOS T .)
    PARDER          reduce using rule 21 (E -> E MENOS T .)
    POR             shift and go to state 31
    DIVIDE          shift and go to state 32


state 47

    (23) T -> T POR F .

    POR             reduce using rule 23 (T -> T POR F .)
    DIVIDE          reduce using rule 23 (T -> T POR F .)
    MAS             reduce using rule 23 (T -> T POR F .)
    MENOS           reduce using rule 23 (T -> T POR F .)
    MAYOR           reduce using rule 23 (T -> T POR F .)
    MENOR           reduce using rule 23 (T -> T POR F .)
    MAYORIGUAL      reduce using rule 23 (T -> T POR F .)
    MENORIGUAL      reduce using rule 23 (T -> T POR F .)
    IGUALQUE        reduce using rule 23 (T -> T POR F .)
    DIFERENTE       reduce using rule 23 (T -> T POR F .)
    AND             reduce using rule 23 (T -> T POR F .)
    OR              reduce using rule 23 (T -> T POR F .)
    $end            reduce using rule 23 (T -> T POR F .)
    PARDER          reduce using rule 23 (T -> T POR F .)


state 48

    (24) T -> T DIVIDE F .
